Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29738

Qt Creator crashes when changing back and forths from edit to Design

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 12.0.0-beta1
    • Qt Creator 11.0.0, Qt Creator 11.0.3
    • Widget Designer
    • None
    • macOS
    • 03e064f1c (12.0)

      Open any .ui and a .cpp file, select the cpp file. Click edit then click design a couple of times. Crash. Same if you switch back and forth documents.

      Note I do have GitHub Copilot installed but I do not think it's relevant. Please find the stack trace attached.

      0x10a577a8c TextEditor::TextBlockUserData::clearSuggestion() + 4

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            clicea Carlos Licea
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes