Copilot: Do not request completions for read only editors

Fixes: QTCREATORBUG-29738
Change-Id: I7e894a079595265f163c63243a3e8b098696f696
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>